@@ -14,13 +14,13 @@
 
 package games.strategy.triplea.delegate.remote;
 
-import java.util.HashMap;
-
 import games.strategy.engine.data.ProductionRule;
 import games.strategy.engine.data.RepairRule;
 import games.strategy.engine.data.Territory;
 import games.strategy.engine.message.IRemote;
 import games.strategy.util.IntegerMap;
+
+import java.util.Map;
 
 /**
  * @author Sean Bridges
@@ -34,5 +34,5 @@ public interface IPurchaseDelegate extends IRemote
      */
     public String purchase(IntegerMap<ProductionRule> productionRules);
     
-    public String purchaseRepair(HashMap<Territory, IntegerMap<RepairRule>> productionRules);
+    public String purchaseRepair(Map<Territory, IntegerMap<RepairRule>> productionRules);
 }
